@@ -59,7 +59,9 @@ import javax.xml.parsers.SAXParserFactory;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 
@@ -379,8 +381,9 @@ public class XMLLoader extends ContentStreamLoader {
     float boost = 1.0f;
     boolean isNull = false;
     String update = null;
-
-    while (true) {
+    Map<String, Map<String, List<Object>>> updateMap = null;
+    boolean complete = false;
+    while (!complete) {
       int event = parser.next();
       switch (event) {
         // Add everything to the text
@@ -392,13 +395,24 @@ public class XMLLoader extends ContentStreamLoader {
 
         case XMLStreamConstants.END_ELEMENT:
           if ("doc".equals(parser.getLocalName())) {
-            return doc;
+            complete = true;
+            break;
           } else if ("field".equals(parser.getLocalName())) {
             Object v = isNull ? null : text.toString();
             if (update != null) {
-              Map<String,Object> extendedValue = new HashMap<String,Object>(1);
-              extendedValue.put(update, v);
-              v = extendedValue;
+              if (updateMap == null) updateMap = new HashMap<String, Map<String, List<Object>>>();
+              Map<String, List<Object>> extendedValues = updateMap.get(name);
+              if (extendedValues == null) {
+                extendedValues = new HashMap<String, List<Object>>(1);
+                updateMap.put(name, extendedValues);
+              }
+              List<Object> values = extendedValues.get(update);
+              if (values == null) {
+                values = new ArrayList<Object>();
+                extendedValues.put(update, values);
+              }
+              values.add(v);
+              break;
             }
             doc.addField(name, v, boost);
             boost = 1.0f;
@@ -434,5 +448,15 @@ public class XMLLoader extends ContentStreamLoader {
           break;
       }
     }
+
+    if (updateMap != null)  {
+      for (Map.Entry<String, Map<String, List<Object>>> entry : updateMap.entrySet()) {
+        name = entry.getKey();
+        Map<String, List<Object>> value = entry.getValue();
+        doc.addField(name, value, 1.0f);
+      }
+    }
+
+    return doc;
   }
 }
